--- a/Assignment-1/code/style.css
+++ b/Assignment-1/code/style.css
@@ -1,1 +1,77 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+body{
+    width: 100%;
+    height: 100%;
+    padding: 30px;
+}
+#root{
+    display: flex;
+    flex-direction: column;
+}
+.yellow, .pink, .blue{
+    display: flex;
 
+}
+.yellow{
+    justify-content: space-between;
+    background-color: #fff;
+    height: 30vh;
+}
+.yellow div{
+    background-color: yellow;
+    width: 48.5%;
+    height: inherit;
+}
+
+.pink{
+    background-color: rgb(207, 39, 67);
+    justify-content: start;
+    width: 100%;
+    height: 30vh;
+    margin: 25px auto;
+}
+.blue{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.blue div{
+    background-color: rgb(59, 77, 179);
+    width: 32%;
+    height: 30vh;
+}
+
+@media screen and (max-width:768px) {
+    .blue{
+        display: flex;
+        flex-direction: column;
+    }
+    .blue div{
+        width: 100%;
+        height: 10vh;
+        margin-bottom: 1rem;
+    }
+}
+
+@media screen and (max-width:320px) {
+    .yellow, .blue, .pink{
+        flex-direction: column;
+    }
+    .yellow div{
+        width: 100%;
+        height: 45%;
+    }
+    .blue{
+        justify-content: space-between;
+    }
+    .blue div{
+        width: 100%;
+        height: 10vh;
+        margin-bottom: 14px;
+    }
+} 
