--- a/Assignment-2/code/my-app/src/index.css
+++ b/Assignment-2/code/my-app/src/index.css
@@ -11,3 +11,48 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body{
+  background-color: #f3f3f3;
+}
+.container{
+  display: flex;
+  flex-direction: column;
+  width: 18%;
+  margin: 10vh auto;
+  border: 1px solid black;
+  padding: .8rem;
+  min-width: 225px;
+  border-radius: .5rem;
+  background-color: #fff;
+}
+.container img{
+  border-radius: .75rem;
+  margin-bottom: .5rem;
+}
+.container .name{
+  color: rgb(49, 168, 207);
+  font-size: 2.5rem;
+  font-weight: bold;
+  font-family: sans-serif;
+}
+.container p{
+  opacity: .75;
+  margin-left: .4rem;
+  margin-bottom: .25rem;
+}
+
+.container .location, .container .b-group, .container .age{
+  font-weight: bold;
+  font-size: 1.25rem;
+  margin-bottom: 1rem;
+  margin-left: .4rem;
+}
+.container .age{
+  margin-bottom: -.25rem;
+} 
